k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: timetracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - name: todo-api
        image: 660409041093.dkr.ecr.eu-west-3.amazonaws.com/timetracker:latest
        ports:
        - containerPort: 3000
