k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: timetracker
spec:
  selector:
    app: todo-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
